erstellt nun mittels Befehl "mvn clean package" msi Installer in target